--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Limitless Quack</title>
-    <link rel="icon" href="images/logo.png">
+    <link rel="icon" href="images/logo.ico">
     <link rel="stylesheet" href="style.css">
-    <favicon href="images/logo.png" type="image/png">
 </head>
 <body>
 
@@ -67,3 +66,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
